ctm-sf-homeloan-app/main/default/objects/LoanApplicantExpense__c/LoanApplicantExpense__c.object-meta.xml
<CustomObject>
    <label>Loan Applicant Expense</label>
    <nameField>
        <label>Loan Applicant Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Applicant Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>