ctm-sf-homeloan-app/main/default/objects/LoanApplicantExpense__c/fields/AId__c.field-meta.xml
<CustomField>
    <fullName>AId__c</fullName>
    <formula>LoanApplicant__r.ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AId</label>
    <type>Text</type>
</CustomField>