ctm-sf-homeloan-app/main/default/objects/LoanApplicantExpense__c/fields/ExpenseSubType__c.field-meta.xml
<CustomField>
    <fullName>ExpenseSubType__c</fullName>
    <label>Expense SubType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExpenseSubTypes</valueSetName>
    </valueSet>
</CustomField>