ctm-sf-homeloan-app/main/default/objects/LoanApplicantExpense__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description
  >The frequency of the expense payments. Expenses of type ‘Credit Card Limit’ must
        have a frequency of annually.</description>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Periods</valueSetName>
    </valueSet>
</CustomField>