ctm-sf-homeloan-app/main/default/objects/LoanApplicantExpense__c/fields/investmentPropertyExpenseSubtype__c.field-meta.xml
<CustomField>
    <fullName>investmentPropertyExpenseSubtype__c</fullName>
    <label>Investment Property Expense Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExpenseLivingPropertyDetailTypes</valueSetName>
    </valueSet>
</CustomField>