ctm-sf-homeloan-app/main/default/objects/LoanApplicantExpense__c/fields/LoanApplicant__c.field-meta.xml
<CustomField>
    <fullName>LoanApplicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Applicant</label>
    <referenceTo>LoanApplicant__c</referenceTo>
    <relationshipLabel>Loan Applicant Expenses</relationshipLabel>
    <relationshipName>Loan_Applicant_Expenses1</relationshipName>
    <type>Lookup</type>
</CustomField>