ctm-sf-homeloan-app/main/default/objects/LoanApplicantExpense__c/fields/LoanApplicationExpense__c.field-meta.xml
<CustomField>
    <fullName>LoanApplicationExpense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application Expense</label>
    <referenceTo>LoanApplicationExpense__c</referenceTo>
    <relationshipLabel>Loan Applicant Expenses</relationshipLabel>
    <relationshipName>Loan_Applicant_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>