ctm-sf-homeloan-app/main/default/objects/LoanApplicantExpense__c/fields/OutstandingAmt__c.field-meta.xml
<CustomField>
    <fullName>OutstandingAmt__c</fullName>
    <description
  >The amount left to pay for the expense. Required for refinanced expenses and expenses with type ‘Mortgage Loan’</description>
    <label>Outstanding Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>