ctm-sf-homeloan-app/main/default/objects/LoanApplicantExpense__c/fields/Refinance__c.field-meta.xml
<CustomField>
    <fullName>Refinance__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates if the expense is being refinanced by the new loan.</description>
    <label>Refinance</label>
    <type>Checkbox</type>
</CustomField>